v1.7.0 (29/06/2020)
- implemented new pandda export routine which takes advantage of gemmi
- updated html export accordingly
- bug fix: order of commands changed in buster.sh to enable buster-report run on DLS cluster
- added links to buster-reports in refinement table

v1.6.29 (28/06/2020)
- added capture of person (and date) changing RefinementOutcome field in DB

v1.6.28 (28/06/2020)
- added capture of refiner and date of refinement in DB after refinement

v1.6.27 (28/06/2020)
- made water update optional when refining with with Buster

v1.6.26 (24/06/2020)
- added option for anisotropic B-factor refinement with Buster

v1.6.25 (22/06/2020)
- backup soakDB after restart and 'update database from filesystem'

v1.6.24 (22/06/2020)
- bug fix: missing '\n' in calculate_maps (XChemRefine) deleted soakDB file

v1.6.23 (12/06/2020)
- use gemmi (if available) to convert event maps to mtz

v1.6.22 (11/06/2020)
- added mapmask step after map calculation in buster refinement in order to cover entire molecule (required for nglview)

v1.6.21 (04/06/2020)
- source ccp4 7.0 at Diamond before running giant.score_model during Buster refinement

v1.6.20 (03/06/2020)
- enable remote cluster submission of (Buster) refinement jobs

v1.6.19 (28/05/2020)
- combined parsing of 'agamemnon' auto-collection into single function

v1.6.18 (17/05/2020)
- removed dls specific source files from pandda.analyse script when running on local machine

v1.6.17 (17/05/2020)
- DIMPLE: added 'tolerance 5' keyword to pointless step to allow reindexing in case of slightly larger unit cell differences

v1.6.16 (12/05/2020)
- XChemExplorer.py removed unused 'import gtk' statement which is incompatible with ccp4 7.1

v1.6.15 (12/05/2020)
- added html summary for all '5-deposition ready' structures
- HTML summary: show NO_SPIDER_PLOT_AVAILABLE.png if spider plot is missing

v1.6.14 (11/05/2020)
- XChemUtils: get BUSTER from PROGRAM REMARK